--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.65.3",
     "@react-three/fiber": "^8.12.0",
     "@types/three": "^0.150.1",
     "react": "^18.2.0",
