--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-alpha.81",
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.65.3",
     "@react-three/fiber": "^8.12.0",
     "@types/three": "^0.150.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.151.3"
+    "three": "^0.151.3",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
