--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.151.3",
+    "three-stdlib": "^2.22.4",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
