--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/drei": "^9.65.3",
     "@react-three/fiber": "^8.12.0",
     "@types/three": "^0.150.1",
+    "camera-controls": "^2.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.151.3",
